--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "@angular/compiler-cli": "^14.2.12",
     "@angular/language-service": "14.2.12",
     "@compodoc/compodoc": "^1.1.19",
+    "@faker-js/faker": "^9.0.3",
     "@fortawesome/fontawesome-free": "^5.2.0",
     "@playwright/test": "^1.45.3",
     "@types/leaflet": "1.2.3",
